--- a/_posts/2021-08-10-read-note-1.markdown
+++ b/_posts/2021-08-10-read-note-1.markdown
@@ -6,3 +6,10 @@ categories: note
 ---
 
 昨晚借着快失业的皮劲， 看了松本清张《坏女人》里的前两篇， 以及白先勇的短篇《谪仙记》。
+这几篇都描写了女子的形象。 
+
+前者虽用更为细腻的笔触写了女性的情窦初开，为情所困， 但我对第一篇《来自远方的呼唤》的形容只能写下：青春疼痛小说，这般评价。 妹妹对姐夫抱有好感这种伦理情节，不如看志村贵子漫画《倔恋》里展现的情感纠葛。 第二篇《卷首句之女》更符合我的口味，以局外人的对话，揭开“卷首句之女”的遭遇。虽然中途有觉得是骗保案，结局依然出乎意料。
+
+就仅看完的两篇来说，书里展现更多是男性的“恶”。
+
+ 至于《谪仙记》， 原以为会是注重这帮纽约客漂泊异乡的心理描写，然而展现的却是如何纸醉金迷，沉迷嗜酒赌博。 就如电影《唐人街》以及小说《八月的星期天》里一样，女性只是一个为“悲情”结尾陈铺的形象，被宿命论推向死亡。
